@@ -3,6 +3,7 @@ Version: 2.4.17
 Date: ???
   Changes:
     - Nerfed big aluminium mine module slots to 1 to match other big mines
+    - Changed molten quartz 5 and 6 to use lithium peroxide instead of fuel rods
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.16
 Date: 2024-6-3
